--- a/VE_CE/Utilities/VE_CE_UtilitiesLib.vcproj
+++ b/VE_CE/Utilities/VE_CE_UtilitiesLib.vcproj
@@ -106,7 +106,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="dbg|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory=".\VE_CE_UtilitiesLib\$(ConfigurationName)"
 			ConfigurationType="2"
