--- a/VE_CE/WinServer.vcproj
+++ b/VE_CE/WinServer.vcproj
@@ -102,7 +102,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="dbg|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/bin/win32"
 			IntermediateDirectory="./VE_CE/$(ConfigurationName)"
 			ConfigurationType="1"
@@ -216,7 +216,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -238,7 +238,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -260,7 +260,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
