--- a/VE_Conductor/GUIPlugin/GUIPluginLib.vcproj
+++ b/VE_Conductor/GUIPlugin/GUIPluginLib.vcproj
@@ -106,7 +106,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="dbg|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory=".\GUIPluginLib\$(ConfigurationName)"
 			ConfigurationType="2"
@@ -226,7 +226,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -248,7 +248,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -270,7 +270,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -292,7 +292,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -314,7 +314,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -336,7 +336,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -362,7 +362,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -384,7 +384,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -406,7 +406,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -428,7 +428,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -450,7 +450,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -472,7 +472,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -494,7 +494,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -516,7 +516,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -538,7 +538,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -564,7 +564,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
