--- a/VE_Conductor/Utilities/VE_ConductorGUI_UtilitiesLib.vcproj
+++ b/VE_Conductor/Utilities/VE_ConductorGUI_UtilitiesLib.vcproj
@@ -106,7 +106,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="dbg|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory=".\VE_Conductor_GUI_UtilitiesLib\$(ConfigurationName)"
 			ConfigurationType="2"
@@ -269,7 +269,7 @@
 				RelativePath=".\TBIsosurface.cxx"
 				>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
