--- a/VE_Open/XML/Shader/VE_Shader.vcproj
+++ b/VE_Open/XML/Shader/VE_Shader.vcproj
@@ -16,7 +16,7 @@
 	</ToolFiles>
 	<Configurations>
 		<Configuration
-			Name="dbg|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory=".\VE_Shader\$(ConfigurationName)"
 			ConfigurationType="2"
@@ -244,7 +244,7 @@
 				RelativePath=".\veshader.xsd"
 				>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
