--- a/VE_Open/VESOpen/VESOpen.vcproj
+++ b/VE_Open/VESOpen/VESOpen.vcproj
@@ -94,7 +94,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="osg_dbg|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
