--- a/VE_Open/XML/CAD/VE_CAD.vcproj
+++ b/VE_Open/XML/CAD/VE_CAD.vcproj
@@ -16,7 +16,7 @@
 	</ToolFiles>
 	<Configurations>
 		<Configuration
-			Name="dbg|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory=".\VE_CAD\$(ConfigurationName)"
 			ConfigurationType="2"
@@ -276,7 +276,7 @@
 				RelativePath=".\vecad.xsd"
 				>
 				<FileConfiguration
-					Name="dbg|Win32"
+					Name="Debug|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
