--- a/VE_Open/XML/VE_XML.vcproj
+++ b/VE_Open/XML/VE_XML.vcproj
@@ -16,7 +16,7 @@
 	</ToolFiles>
 	<Configurations>
 		<Configuration
-			Name="dbg|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory=".\XML\$(ConfigurationName)"
 			ConfigurationType="2"
@@ -363,7 +363,7 @@
 					RelativePath=".\verg.xsd"
 					>
 					<FileConfiguration
-						Name="dbg|Win32"
+						Name="Debug|Win32"
 						ExcludedFromBuild="true"
 						>
 						<Tool
