updated VE_Conductor/Utilities Makefile

--- a/VE_Conductor/Utilities/Makefile
+++ b/VE_Conductor/Utilities/Makefile
@@ -43,7 +43,7 @@ SRCS=\
    CADNodePropsDlg.cxx \
    CADOpacitySliderDlg.cxx \
    DualSlider.cxx\
-   spinctld.cpp\
+   spinctld.cxx\
    ROIDialog.cxx\
    BaseDialog.cxx
 
