minor changes to the way the idl files are generated. this always ensures that no matter what build order someone is using that the idl files will be generated correctly.

--- a/VE_Open/SConscript
+++ b/VE_Open/SConscript
@@ -1,11 +1,11 @@
-#!python
+##Builds tao skel files
 openSubdirs = Split("""
     idl
+    skel
     XML
     XML/Shader
     XML/CAD
     XML/Model
-    skel
 """)
 
 
