Updated Makefile for SceneGraph

--- a/VE_Xplorer/SceneGraph/Makefile
+++ b/VE_Xplorer/SceneGraph/Makefile
@@ -66,7 +66,8 @@ SRCS=\
    vtkActorToOSG.cpp \
    vtkActorToPF.cxx \
    Triangles.cxx \
-   Text.cxx
+   Text.cxx \
+	PhysicsSimulator.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
