--- a/VE_Conductor/Framework/SConscript
+++ b/VE_Conductor/Framework/SConscript
@@ -51,7 +51,7 @@ env.Append(LIBPATH = [pj('#', buildDir, 'VE_Conductor','Network'),
 env.ParseConfig('flagpoll TAO ACE TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
                               TAO_CosNaming TAO_Svc_Utils TAO_IORTable TAO_Messaging \
                               TAO_PortableServer TAO_BiDirGIOP TAO_AnyTypeCode \
-                              TAO_Messaging TAO_Valuetype --cflags --libs')
+                              TAO_Messaging TAO_Valuetype vpr --cflags --libs')
 xerces_options.apply( env )
 wxwidgets_options.apply( env )
 prog = ves_pkg.createProgram('WinClient', env, 'bin')
