fixed build issue on RHEL_4

--- a/VE_Conductor/Framework/Makefile
+++ b/VE_Conductor/Framework/Makefile
@@ -105,7 +105,7 @@ include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
 #include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.boost.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.apr.mk
-
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vpr.mk
 
 EXTRA_CXXFLAGS+= -g
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
