Scons: Now builds docs (initial version); Setup: Docs variables added; Launcher: Unix Dependencies notice to set dependencies on initial load added.

--- a/share/SConscript
+++ b/share/SConscript
@@ -9,3 +9,4 @@ launcherBundle = ves_pkg.createFileBundle( 'share' )
 jconfFile = sca_util.getFilesRecursiveByExt( '.', ['.jconf'] )
 launcherBundle.addFiles( jconfFile )
    
+SConscript(dirs = "docs")
